# OS

./: README.md
kp/: CMakeLists.txt  main.cpp  results.txt
kp/headers/: TestBin.hpp  binaryAllocator.hpp  freeListsAllocator.hpp  shared.hpp
lab1/: CMakeLists.txt  child_process.cpp  main.cpp  out  strace.txt
lab2/: 1.in  CMakeLists.txt  main.cpp  random.cpp  strace.txt
lab2/InOutFiles/: 1.in  1.out  2.in  data.txt
lab2/goprogramm/: go.mod  main  main.go
lab2/scripts/: graph.py  script.sh  test.sh
lab2/src/: AssyncMain.cpp  SyncMain.cpp  WaitGroup.cpp
lab3/: CMakeLists.txt  child_process.cpp  main.cpp  my_out_file  shared_memory.hpp  strace.txt
lab4/: CMakeLists.txt  dynamicMain.cpp  function.hpp  function1.cpp  function2.cpp  staticMain.cpp  strace.txt
lab5-7/: CMakeLists.txt  calculationNode.cpp  controlNode.cpp  myMQ.hpp  request.hpp  response.hpp  strace.txt  test.cpp  timer.hpp  topology.hpp
